<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="3dp"
            tools:context=".activities.DetailActivity"
            tools:deviceIds="wear">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floating_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:contentDescription="@string/favorite"
                android:src="@drawable/ic_baseline_favorite_border_24"
                app:backgroundTint="#000000"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_user_detail"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginStart="165dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="165dp"
                android:src="@drawable/ic_fab_github"
                app:civ_border_color="#A89999"
                app:civ_border_overlay="true"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_user_name"
                android:layout_width="243dp"
                android:layout_height="27dp"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:gravity="center"
                tools:text="Fadhlan Hadaina"
                android:textColor="#000000"
                android:textSize="22sp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/civ_user_detail" />

            <TextView
                android:id="@+id/tv_user"
                android:layout_width="202dp"
                android:layout_height="29dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@string/my_username"
                android:textColor="#8B8F93"
                android:textSize="18sp"
                android:typeface="normal"
                app:layout_constraintBottom_toTopOf="@+id/tv_followerfollowing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_followerfollowing"
                android:layout_width="292dp"
                android:layout_height="30dp"
                android:layout_marginBottom="2dp"
                android:gravity="center"
                android:text="@string/my_followers_following"
                app:layout_constraintBottom_toTopOf="@+id/cv2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="28dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_followerfollowing">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="3dp"
                    tools:context=".activities.DetailActivity"
                    tools:deviceIds="wear">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:maxLines="1"
                            android:src="@drawable/ic_far_building"
                            android:contentDescription="Company" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:text="Company"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_user_company"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/my_company"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:maxLines="1"
                            android:src="@drawable/ic_far_address_book" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:text="Location"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_user_location"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/my_location" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:maxLines="1"
                            android:src="@drawable/ic_fab_usb" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="5dp"
                            android:text="Repository"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_user_repos"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:text="@string/my_repository"
                            tools:ignore="RtlHardcoded" />
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:tabTextColor="@android:color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#4DFFFFFF">
    </androidx.viewpager2.widget.ViewPager2>
    </LinearLayout>
</ScrollView>